# hush

./: .gitignore  .treeclipignore  Cargo.toml  Encrypting sensitive videos for cloud storage.md  README.md  justfile
.github/workflows/: rust.yml
docs/: file-format.md
src/: config.rs  crypto.rs  envelope.rs  error.rs  lib.rs  progress.rs  stream.rs
src/crypto/: kdf.rs  mod.rs  x_chacha20_poly1305.rs
tests/: integration_test.rs
