[package]
name = "hush"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["stream"] }
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
rpassword = "7.5.4"
dirs = "6.0.0"
toml = "1.1.3"
indicatif = "0.18.6"
